# vscode_cpp_cmake_template

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test_.cpp
Basic/: CMakeLists.txt
Test/: CMakeLists.txt  test.cpp  test.hpp
